####################################################################################################
### Copyright (C) 2019 by Agustin Alvarez <agustin.l.alvarez.1@gmail.com>. All rights reserved.
###
### This work is licensed under the terms of the Apache License, Version 2.0.
###
### See <https://github.com/argentumonline/Aurora/blob/master/LICENSE>.
####################################################################################################

CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

####################################################################################################
# [ROOT:FORWARD]
####################################################################################################

ADD_SUBDIRECTORY("Code")