####################################################################################################
### Copyright (C) 2019 Agustin L. Alvarez. All rights reserved.
###
### This work is licensed under the terms of the Apache License, Version 2.0.
###
### See <https://opensource.org/licenses/Apache-2.0>.
####################################################################################################

CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

####################################################################################################
# [ROOT:FORWARD]
####################################################################################################

ADD_SUBDIRECTORY("Code")