####################################################################################################
### Copyright (C) 2019 by Agustin Alvarez <agustin.l.alvarez.1@gmail.com>. All rights reserved.
###
### This work is licensed under the terms of the Apache License, Version 2.0.
###
### See <https://github.com/argentumonline/Aurora/blob/master/LICENSE>.
####################################################################################################

####################################################################################################
# [ROOT:FORWARD]
####################################################################################################

ADD_SUBDIRECTORY("Foundation")