####################################################################################################
### Copyright (C) 2019 by Agustin Alvarez <agustin.l.alvarez.1@gmail.com>. All rights reserved.
###
### This work is licensed under the terms of the Apache License, Version 2.0.
###
### See <https://github.com/argentumonline/Aurora/blob/master/LICENSE>.
####################################################################################################

PROJECT(Aurora CXX)

####################################################################################################
# [PROJECT:INCLUDE]
####################################################################################################

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")

####################################################################################################
# [PROJECT:SOURCE]
####################################################################################################

FILE(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/**.cpp")

####################################################################################################
# [PROJECT:EXECUTABLE]
####################################################################################################

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})